<resources>
    <string name="app_name">OfertAPP</string>
    <string name="Login">Login</string>
    <string name="inicioLogin">Ya estoy registrado</string>
    <string name="Registro">Registro</string>
    <!--Acerca De-->
    <string name="Acercade">Acerca de</string>
    <string name="textoAcercaDe">Esta aplicación ha sido desarrollado como trabajo final de máster en
        Ingeniería Informática en la Universidad de Alicante, por el alumno Pedro Gómez Valdés</string>

    <!--Registro-->
    <string name="registro_nombre">¿Cómo te llamas?</string>
    <string name="registro_email">¿Correo electrónico?</string>
    <string name="registro_telefono">Tu teléfono de contacto</string>
    <string name="registro_descripcion">Breve descripción personal</string>
    <string name="registro_button">Registrarse</string>
    <string name="mensaje_ok_registro">Usuario correctamente registrado</string>
    <string name="mensaje_fail_registro">Email ya existente</string>
    <string name="mensaje_error_registro">Ups! Ha ocurrido un problema</string>

    <!--Login-->
    <string name="mensaje_error_login">Ha ocurrido un problema con el login</string>
    <string name="mensaje_ok_login">Login correcto</string>
    <string name="mensaje_error_login_user">El usuario no está dado de alta</string>

    <!--Mi perfil->menú-->
    <string name="buscar_anuncios">Buscar</string>
    <string name="editar_perfil">Mi perfil</string>
    <string name="publicar">Nuevo anuncio</string>
    <string name="eliminar">Eliminar perfil</string>
    <string name="mis_anuncios">Mis anuncios</string>

    <!--Mi perfil->Eliminar usuario-->
    <string name="mensaje_ok_delete_user">Usuario eliminado correctamente</string>
    <string name="mensaje_error_delete_user">No se ha podido borrar el usuario</string>

    <!--Nuevo anuncio-->
    <string name="mensaje_ok_nuevo_anuncio">Anuncio creado correctamente</string>
    <string name="mensaje_fail_nuevo_anuncio">Error al crear el anuncio</string>
    <string name="anyadir_nuevo_anuncio_boton">Añadir anuncio</string>
    <string name="nuevoAnuncioTitulo">Añade un título</string>
    <string name="nuevoAnuncioProvincia">Selecciona una provincia</string>
    <string name="nuevoAnuncioSector">Selecciona un sector</string>
    <string name="nuevoAnuncioPrecio">¿Precio máximo?</string>
    <string name="nuevoAnuncioDescripcion">¿Algo que añadir?</string>

    <!--Detalle anuncio -->
    <string name="tituloDetalleAnuncio">Detalle Anuncio</string>
    <string name="detalleTituloTexto">Título anuncio</string>
    <string name="detalleAnuncioBotonEliminar">Eliminar anuncio</string>
    <string name="detalleAnuncioBotonModificar">Guardar cambios</string>
    <string name="detalleSectorTexto">Sector profesional</string>
    <string name="detalleProvinciaTexto">Provincia</string>
    <string name="detallePrecio">Precio max</string>
    <string name="detalleDescripcion">Descripción</string>
    <string name="deleteMessage">¿Desea borrar el anuncio?</string>
    <string name="confirmTitle">Confirmar</string>
    <string name="optionYes">Sí</string>
    <string name="optionCancel">Cancelar</string>
    <string name="mensaje_ok_delete_anuncio">Anuncio borrado correctamente</string>
    <string name="mensaje_error_delete_anuncio">Ha ocurrido un problema</string>
    <string name="deleteMessageLoading">Eliminando...</string>
    <string name="modifyMessage">¿Desea modificar el anuncio?</string>
    <string name="mensaje_accion_ok">Acción completada</string>
    <string name="mensaje_accion_error">Ha ocurrido algún problema</string>


    <!-- Buscar anuncio -->
    <string name="tituloBuscarAnuncio">¿Buscas algo?</string>
    <string name="buscarAnuncioSector">Selecciona un sector</string>
    <string name="buscarAnuncioProvincia">Ahora una provincia</string>
    <string name="buscarAnuncioPrecio">Introduce un precio máximo</string>
    <string name="buscarAnuncioFecha">Y una fecha de publicación</string>
    <string name="buscarAnuncio24Horas">Últimas 24 horas</string>
    <string name="buscarAnuncio7Dias">Últimos 7 días</string>
    <string name="buscarAnuncioMes">Último mes</string>
    <string name="buscarAnuncioSinFecha">No tengo en cuenta la fecha</string>
    <string name="buscar_anuncio_button">Voy a tener suerte</string>
    <string name="botonMostrarFecha">Después del...</string>

    <!-- Detalle listado publico -->
    <string name="detalleListadoTituloAnuncio">Título</string>
    <string name="detalleListadoProvinciaAnuncio">Provincia</string>
    <string name="detalleListadoSectorAnuncio">Sector</string>
    <string name="detalleListadoPrecioAnuncio">Precio max</string>
    <string name="detalleListadoDescripcionAnuncio">Descripción</string>

    <!--Editar perfil usuario -->


    <!-- ActionBar AND logout messages-->
    <string name="action_logout">Cerrar sesión</string>
    <string name="logoutMessage">¿Desea salir de la aplicación?</string>
    <string name="confirmLogout">Sí</string>
    <string name="action_nuevo">Nuevo anuncio</string>

</resources>
