<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tituloPagina"
                    android:textColor="#000000"
                    android:text="@string/tituloBuscarAnuncio"
                    android:textSize="25sp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buscarAnuncioSector"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"/>
                <Spinner
                    android:id="@+id/buscar_anuncio_sector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Sector"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buscarAnuncioProvincia"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"/>
                <Spinner
                    android:id="@+id/buscar_anuncio_provincia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Provincia"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buscarAnuncioPrecio"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/buscar_anuncio_precio_servicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="(€)"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buscarAnuncioFecha"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center" />
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/picDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/botonMostrarFecha"
                        android:onClick="showDatePickerDialog"/>
                    <TextView
                        android:layout_below="@+id/picDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/showDate"
                        android:textSize="18dp"/>
                    </LinearLayout>

                </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buscar_anuncio_button"
                android:id="@+id/button_buscar_anuncio" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>