<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.pedro.ofertapp.DetalleAnuncio"
android:gravity="center"
android:padding="15dp"
android:background="@drawable/background"
android:theme="@android:style/Theme.NoTitleBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tituloDetalle"
                    android:textColor="#000000"
                    android:text="New Text"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalleTituloTexto"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/detalleTituloAnuncio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#fff"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalleSectorTexto"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"/>
                <Spinner
                    android:id="@+id/detalleSectorProfesional"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#fff"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalleProvinciaTexto"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"/>
                <Spinner
                    android:id="@+id/detalleProvincia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#fff"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detallePrecio"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/detallePrecioAnuncio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#fff"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalleDescripcion"
                    android:textColor="#000000"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/detalleTextoAnuncio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#fff"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:singleLine="false"
                    android:textColor="#fff"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalleAnuncioBotonModificar"
                android:id="@+id/buttonModificarDatos"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalleAnuncioBotonEliminar"
                android:id="@+id/buttonEliminarAnuncio"/>
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>