<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pedro.ofertapp.activity.ListadoDetalleAnuncioActivity"
    android:gravity="center"
    android:background="@drawable/background"
    android:theme="@android:style/Theme.NoTitleBar">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50px"
            android:layout_marginLeft="50px"
            android:id="@+id/imageView"
            android:src="@drawable/user" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="50px"
            android:layout_marginLeft="50px">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombreUsuario"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Nombre usuario"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:id="@+id/emailUsuario"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Email usuario"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:id="@+id/telefonoUsuario"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Telefono usuario"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:layout_marginLeft="50px"
                android:text="@string/detalleListadoTituloAnuncio"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detalleListadoTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50px"
                android:textColorHint="#fff"
                android:background="#00000000"
                android:letterSpacing="0.1"
                android:textSize="16dp"
                android:textColor="#fff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:layout_marginLeft="50px"
                android:text="@string/detalleListadoProvinciaAnuncio"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detalleListadoProvincia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50px"
                android:textColorHint="#fff"
                android:background="#00000000"
                android:letterSpacing="0.1"
                android:textSize="16dp"
                android:textColor="#fff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:layout_marginLeft="50px"
                android:text="@string/detalleListadoSectorAnuncio"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detalleListadoSector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50px"
                android:textColorHint="#fff"
                android:background="#00000000"
                android:letterSpacing="0.1"
                android:textSize="16dp"
                android:textColor="#fff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:layout_marginLeft="50px"
                android:text="@string/detalleListadoPrecioAnuncio"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detalleListadoPrecio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50px"
                android:textColorHint="#fff"
                android:background="#00000000"
                android:letterSpacing="0.1"
                android:textSize="16dp"
                android:textColor="#fff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:layout_marginLeft="50px"
                android:text="@string/detalleListadoDescripcionAnuncio"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detalleListadoDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#fff"
                android:background="#00000000"
                android:letterSpacing="0.1"
                android:textSize="16dp"
                android:layout_marginLeft="50px"
                android:singleLine="false"
                android:textColor="#fff"
                android:lines="8"
                android:scrollbars="vertical"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
    </ScrollView>